# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  game_1.py
brain_games/games/: game_1.py  game_2.py  game_3.py  game_4.py  game_5.py
brain_games/logic/: logic_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
